fix: Review menu on mobile

--- a/website/public/app-ui/css/app.scss
+++ b/website/public/app-ui/css/app.scss
@@ -102,7 +102,7 @@ input.input-uc {
 }
 
 .navbar-inverse .navbar-nav > li > a.red {
-  color: red;
+  color: orangered;
 }
 
 .bold {
@@ -110,5 +110,5 @@ input.input-uc {
 }
 
 .red {
-  color: red;
+  color: orangered;
 }
